force-app/main/default/objects/Work_Order__c/fields/Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost__c</fullName>
    <formula>BD_LR_MBD_DR_LDR_cost__c+
CASE(Hall__c,&quot;1 Hall&quot;,IF(Owner:User.ProfileId=&apos;00e1P000000Zli9&apos;,Owner:User.Contact.Account.X1_Hall_cost__c,$CustomMetadata.C__mdt.D.X1_Hall_cost__c),&quot;2 Halls&quot;,IF(Owner:User.ProfileId=&apos;00e1P000000Zli9&apos;,Owner:User.Contact.Account.X2_Hall_cost__c,$CustomMetadata.C__mdt.D.X2_Hall_cost__c),&quot;3 Halls&quot;,IF(Owner:User.ProfileId=&apos;00e1P000000Zli9&apos;,Owner:User.Contact.Account.X3_Hall_cost__c,$CustomMetadata.C__mdt.D.X3_Hall_cost__c),&quot;4 Halls&quot;,IF(Owner:User.ProfileId=&apos;00e1P000000Zli9&apos;,Owner:User.Contact.Account.X4_Hall_cost__c,$CustomMetadata.C__mdt.D.X4_Hall_cost__c),0)+
CASE(Walk_In_Closet__c,&quot;1 Walk in Closet&quot;,IF(Owner:User.ProfileId=&apos;00e1P000000Zli9&apos;,Owner:User.Contact.Account.X1_Walk_in_Closet__c,$CustomMetadata.C__mdt.D.X1_Walk_in_Closet__c),&quot;2 Walk in Closet&quot;,IF(Owner:User.ProfileId=&apos;00e1P000000Zli9&apos;,Owner:User.Contact.Account.X2_Walk_in_Closet__c,$CustomMetadata.C__mdt.D.X2_Walk_in_Closet__c),&quot;3 Walk in Closet&quot;,IF(Owner:User.ProfileId=&apos;00e1P000000Zli9&apos;,Owner:User.Contact.Account.X3_Walk_in_Closet__c,$CustomMetadata.C__mdt.D.X3_Walk_in_Closet__c),&quot;4 Walk in Closet&quot;,IF(Owner:User.ProfileId=&apos;00e1P000000Zli9&apos;,Owner:User.Contact.Account.X4_Walk_in_Closet__c,$CustomMetadata.C__mdt.D.X4_Walk_in_Closet__c),0)+
CASE(Family_rm__c,&quot;1 Family rm&quot;,IF(Owner:User.ProfileId=&apos;00e1P000000Zli9&apos;,Owner:User.Contact.Account.X1_Family_Room_cost__c,$CustomMetadata.C__mdt.D.X1_Family_Room_cost__c),&quot;2 Family rms&quot;,IF(Owner:User.ProfileId=&apos;00e1P000000Zli9&apos;,Owner:User.Contact.Account.X2_Family_Room_cost__c,$CustomMetadata.C__mdt.D.X2_Family_Room_cost__c),0)+
CASE(Stairs__c,&quot;1 flight stairs&quot;,IF(Owner:User.ProfileId=&apos;00e1P000000Zli9&apos;,Owner:User.Contact.Account.X1_Flight_Stair_cost__c,$CustomMetadata.C__mdt.D.X1_Flight_Stair_cost__c),&quot;2 flight stairs&quot;,IF(Owner:User.ProfileId=&apos;00e1P000000Zli9&apos;,Owner:User.Contact.Account.X2_Flight_Stair_cost__c,$CustomMetadata.C__mdt.D.X2_Flight_Stair_cost__c),&quot;3 flight stairs&quot;,IF(Owner:User.ProfileId=&apos;00e1P000000Zli9&apos;,Owner:User.Contact.Account.X3_Flight_Stair_cost__c,$CustomMetadata.C__mdt.D.X3_Flight_Stair_cost__c),0)+
CASE(Office__c,&quot;Office&quot;,IF(Owner:User.ProfileId=&apos;00e1P000000Zli9&apos;,Owner:User.Contact.Account.Office_Cost__c,$CustomMetadata.C__mdt.D.Office_cost__c),0)+
CASE(Rec_rm_Great_rm__c,&quot;Rec rm/Great rm&quot;,IF(Owner:User.ProfileId=&apos;00e1P000000Zli9&apos;,Owner:User.Contact.Account.Rec_Room_Great_Room_cost__c,$CustomMetadata.C__mdt.D.Rec_Room_Great_Room_cost__c),0)+
CASE(Loft__c,&quot;Loft&quot;,IF(Owner:User.ProfileId=&apos;00e1P000000Zli9&apos;,Owner:User.Contact.Account.Loft_cost__c, $CustomMetadata.C__mdt.D.Loft_cost__c),0)+
IF(INCLUDES(Rugs__c,&quot;3X5&quot;),IF(Owner:User.ProfileId=&apos;00e1P000000Zli9&apos;,Owner:User.Contact.Account.Rugs_3x5_cost__c,$CustomMetadata.C__mdt.D.Rugs_3x5_cost__c),0) +
IF(INCLUDES(Rugs__c,&quot;5X7&quot;),IF(Owner:User.ProfileId=&apos;00e1P000000Zli9&apos;,Owner:User.Contact.Account.Rugs_5X7_cost__c,$CustomMetadata.C__mdt.D.Rugs_5X7_cost__c),0) +
IF(INCLUDES(Rugs__c,&quot;8X10&quot;),IF(Owner:User.ProfileId=&apos;00e1P000000Zli9&apos;,Owner:User.Contact.Account.Rugs_8X10_cost__c,$CustomMetadata.C__mdt.D.Rugs_8X10_cost__c),0) +
IF(INCLUDES(Rugs__c,&quot;9X12&quot;),IF(Owner:User.ProfileId=&apos;00e1P000000Zli9&apos;,Owner:User.Contact.Account.Rugs_9X12_cost__c,$CustomMetadata.C__mdt.D.Rugs_9X12_cost__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>