force-app/main/default/objects/Work_Order__c/fields/Family_rm__c.field-meta.xml
<CustomField>
    <fullName>Family_rm__c</fullName>
    <label>Family rm</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Family rm</fullName>
            </value>
            <value>
                <fullName>2 Family rms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>