force-app/main/default/objects/Work_Order__c/fields/Field_Crew_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Field_Crew_End_Time__c</fullName>
    <inlineHelpText>Auto populated field that captures the time field crew worker clocked out at job</inlineHelpText>
    <label>Field Crew End Time</label>
    <type>DateTime</type>
</CustomField>