force-app/main/default/objects/Work_Order__c/fields/Field_Crew_Net_time__c.field-meta.xml
<CustomField>
    <fullName>Field_Crew_Net_time__c</fullName>
    <description>calculates total of clock in and clock out time</description>
    <formula>( Field_Crew_End_Time__c  -   Field_Crew_Start_Time__c )*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field Crew Net time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>