force-app/main/default/objects/Work_Order__c/fields/Field_Crew_Start_Location__c.field-meta.xml
<CustomField>
    <fullName>Field_Crew_Start_Location__c</fullName>
    <label>Field Crew Start Location</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>