force-app/main/default/objects/Work_Order__c/fields/Field_Notes__c.field-meta.xml
<CustomField>
    <fullName>Field_Notes__c</fullName>
    <inlineHelpText>Relevant info for Field Crew that will apply to all the customers work orders.  Examples:  Unique pricing policy, key pick up instructions, how to navigate at property, when to call for up-charges</inlineHelpText>
    <label>Field Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>