force-app/main/default/objects/Work_Order__c/fields/Front_Desk_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Front_Desk_Follow_up__c</fullName>
    <inlineHelpText>Collect payment, reason job could not be completed, tips for crew members for next clean.</inlineHelpText>
    <label>Front Desk Follow-up</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>