force-app/main/default/objects/Work_Order__c/fields/Hall__c.field-meta.xml
<CustomField>
    <fullName>Hall__c</fullName>
    <label>Hall</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Hall</fullName>
            </value>
            <value>
                <fullName>2 Halls</fullName>
            </value>
            <value>
                <fullName>3 Halls</fullName>
            </value>
            <value>
                <fullName>4 Halls</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>