force-app/main/default/objects/Work_Order__c/fields/HT__c.field-meta.xml
<CustomField>
    <fullName>HT__c</fullName>
    <inlineHelpText>Hard Time.  Customer needs service to start at a specific time.</inlineHelpText>
    <label>HT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>