force-app/main/default/objects/Work_Order__c/fields/Interval_Areas__c.field-meta.xml
<CustomField>
    <fullName>Interval_Areas__c</fullName>
    <label>Interval Areas</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>