force-app/main/default/objects/Work_Order__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice # - Old</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>