force-app/main/default/objects/Work_Order__c/fields/Invoice_Notes__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Notes__c</fullName>
    <inlineHelpText>Pulls options selected from Invoice Notes Options</inlineHelpText>
    <label>Invoice Auto Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>