force-app/main/default/objects/Work_Order__c/fields/Invoice_Notes_Options__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Notes_Options__c</fullName>
    <label>Invoice Notes Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carpet Roll</fullName>
            </value>
            <value>
                <fullName>Wear That Looks Like Soil</fullName>
            </value>
            <value>
                <fullName>Banding</fullName>
            </value>
            <value>
                <fullName>Bleaching</fullName>
            </value>
            <value>
                <fullName>Pivot Wear</fullName>
            </value>
            <value>
                <fullName>Residual Urine Smell</fullName>
            </value>
            <value>
                <fullName>Stain Magic</fullName>
            </value>
            <value>
                <fullName>High Levels Of Pet Hair</fullName>
            </value>
            <value>
                <fullName>Carpet Illusions After Cleaning</fullName>
            </value>
            <value>
                <fullName>Furniture Divots</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>