force-app/main/default/objects/Work_Order__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <formula>IF(ISBLANK(Invoice_Number_Legacy__c),  Name, Invoice_Number_Legacy__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Number - Form</label>
    <type>Text</type>
</CustomField>