force-app/main/default/objects/Work_Order__c/fields/Invoice_Number_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number_Legacy__c</fullName>
    <label>Invoice Number - Legacy</label>
    <length>150</length>
    <type>Text</type>
</CustomField>