force-app/main/default/objects/Work_Order__c/fields/Invoice_Number_VTiger__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number_VTiger__c</fullName>
    <label>Work Order # VTiger</label>
    <length>100</length>
    <type>Text</type>
</CustomField>