force-app/main/default/objects/Work_Order__c/fields/Is_Owner_Franchise__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner_Franchise__c</fullName>
    <formula>CONTAINS(Owner:User.Profile.Name,&apos;Franchise&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Owner Franchise</label>
    <type>Checkbox</type>
</CustomField>