force-app/main/default/objects/Work_Order__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <label>Job Type</label>
    <type>TextArea</type>
</CustomField>