force-app/main/default/objects/Work_Order__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <inlineHelpText>Select an option if there is a key to be picked up</inlineHelpText>
    <label>Key</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pick  up key at Smart shop</fullName>
            </value>
            <value>
                <fullName>Pick up key from Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>