force-app/main/default/objects/Work_Order__c/fields/LB_Combo1__c.field-meta.xml
<CustomField>
    <fullName>LB_Combo1__c</fullName>
    <formula>Account_Name__r.LB_Combo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the property has a lockbox, please enter the combo here</inlineHelpText>
    <label>LB Combo</label>
    <type>Text</type>
</CustomField>