force-app/main/default/objects/Work_Order__c/fields/LB_Combo__c.field-meta.xml
<CustomField>
    <fullName>LB_Combo__c</fullName>
    <inlineHelpText>If the property has a lockbox, please enter the combo here</inlineHelpText>
    <label>LB Combo</label>
    <type>TextArea</type>
</CustomField>