force-app/main/default/objects/Work_Order__c/fields/Lead_Description__c.field-meta.xml
<CustomField>
    <fullName>Lead_Description__c</fullName>
    <label>Lead Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>