force-app/main/default/objects/Work_Order__c/fields/Liv_Din_rm__c.field-meta.xml
<CustomField>
    <fullName>Liv_Din_rm__c</fullName>
    <label>Liv/Din rm</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Liv/Din rm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>