force-app/main/default/objects/Work_Order__c/fields/Living_rm__c.field-meta.xml
<CustomField>
    <fullName>Living_rm__c</fullName>
    <label>Living rm</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Living rm</fullName>
            </value>
            <value>
                <fullName>2 Living rms</fullName>
            </value>
            <value>
                <fullName>3 living rms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>