force-app/main/default/objects/Work_Order__c/fields/LivingRm_DiningRm__c.field-meta.xml
<CustomField>
    <fullName>LivingRm_DiningRm__c</fullName>
    <label>LivingRm/DiningRm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LivingRm/DiningRm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>