force-app/main/default/objects/Work_Order__c/fields/Loft__c.field-meta.xml
<CustomField>
    <fullName>Loft__c</fullName>
    <label>Loft</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>