force-app/main/default/objects/Work_Order__c/fields/Main_Office_Phone_P__c.field-meta.xml
<CustomField>
    <fullName>Main_Office_Phone_P__c</fullName>
    <description>Pulls from Main_Office_Number__c</description>
    <label>Main Office Phone</label>
    <type>Phone</type>
</CustomField>