force-app/main/default/objects/Work_Order__c/fields/Man_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Man_Hrs__c</fullName>
    <inlineHelpText>Estimated time to complete Commercial work orders based on $125/labor hr.</inlineHelpText>
    <label>Est. Hrs</label>
    <length>10</length>
    <type>Text</type>
</CustomField>