force-app/main/default/objects/Work_Order__c/fields/MBD__c.field-meta.xml
<CustomField>
    <fullName>MBD__c</fullName>
    <inlineHelpText>Master Bedroom.  Use only when there are more than 2 bedrooms.</inlineHelpText>
    <label>Master Bedroom</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Master Bedroom</fullName>
            </value>
            <value>
                <fullName>2 Master Bedroom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>