force-app/main/default/objects/Work_Order__c/fields/Net_Click_On_CM1__c.field-meta.xml
<CustomField>
    <fullName>Net_Click_On_CM1__c</fullName>
    <inlineHelpText>Taylor</inlineHelpText>
    <label>Net Click On CM1</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>