force-app/main/default/objects/Work_Order__c/fields/New_Tenant_Follow_Up_Call__c.field-meta.xml
<CustomField>
    <fullName>New_Tenant_Follow_Up_Call__c</fullName>
    <inlineHelpText>Include name and phone # and Smart make a courtesy service follow up call and let them know we can provide services during their occupancy such as selective area cleaning, pet issues, smells, etc.</inlineHelpText>
    <label>New Tenant Follow Up Call</label>
    <length>255</length>
    <type>Text</type>
</CustomField>