force-app/main/default/objects/Work_Order__c/fields/Number_of_bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Number_of_bedrooms__c</fullName>
    <description>Number of bedrooms excluding Master Bedroom</description>
    <inlineHelpText>Number of bedrooms excluding Master Bedroom</inlineHelpText>
    <label>Bedrooms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 BD</fullName>
            </value>
            <value>
                <fullName>2 BD</fullName>
            </value>
            <value>
                <fullName>3 BD</fullName>
            </value>
            <value>
                <fullName>4 BD</fullName>
            </value>
            <value>
                <fullName>5 BD</fullName>
            </value>
            <value>
                <fullName>6 BD</fullName>
            </value>
            <value>
                <fullName>7 BD</fullName>
            </value>
            <value>
                <fullName>8 BD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>