force-app/main/default/objects/Work_Order__c/fields/Number_of_Team_Members__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Team_Members__c</fullName>
    <inlineHelpText>How many crew members at job?</inlineHelpText>
    <label># of Team Members</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>