force-app/main/default/objects/Work_Order__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <inlineHelpText>Any rooms or areas not listed above, like patio, sun, porch, kitchen, bathroom</inlineHelpText>
    <label>Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>