force-app/main/default/objects/Work_Order__c/fields/Other_Email__c.field-meta.xml
<CustomField>
    <fullName>Other_Email__c</fullName>
    <formula>Account_Name__r.Other_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Email</label>
    <type>Text</type>
</CustomField>