force-app/main/default/objects/Work_Order__c/fields/Other_Phone_P__c.field-meta.xml
<CustomField>
    <fullName>Other_Phone_P__c</fullName>
    <description>Account_Name__r.Other_Phone__c</description>
    <label>Other Phone</label>
    <type>Phone</type>
</CustomField>