force-app/main/default/objects/Work_Order__c/fields/Outside_Inside_temp__c.field-meta.xml
<CustomField>
    <fullName>Outside_Inside_temp__c</fullName>
    <label>Outside/Inside temp.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>