force-app/main/default/objects/Work_Order__c/fields/Pad_Count__c.field-meta.xml
<CustomField>
    <fullName>Pad_Count__c</fullName>
    <inlineHelpText>How many pads used for Work Order</inlineHelpText>
    <label>Pad Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>