force-app/main/default/objects/Work_Order__c/fields/Pads_Soiled_per_Labor_Hour__c.field-meta.xml
<CustomField>
    <fullName>Pads_Soiled_per_Labor_Hour__c</fullName>
    <formula>Pad_Count__c  /  Total_Labor_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pad Count/ Total Labor Hours</inlineHelpText>
    <label>Pads Soiled per Labor Hour</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>