force-app/main/default/objects/Work_Order__c/fields/Paid_CC__c.field-meta.xml
<CustomField>
    <fullName>Paid_CC__c</fullName>
    <label>Paid CC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>