force-app/main/default/objects/Work_Order__c/fields/Past_Due_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_Follow_up__c</fullName>
    <inlineHelpText>Notes about past due follow up attempts made to client</inlineHelpText>
    <label>Past Due Follow-up</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>