force-app/main/default/objects/Work_Order__c/fields/Pay_Period__c.field-meta.xml
<CustomField>
    <fullName>Pay_Period__c</fullName>
    <label>Pay Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1/10/2021</fullName>
            </value>
            <value>
                <fullName>1/25/2021</fullName>
            </value>
            <value>
                <fullName>2/10/2021</fullName>
            </value>
            <value>
                <fullName>2/25/2021</fullName>
            </value>
            <value>
                <fullName>3/10/2021</fullName>
            </value>
            <value>
                <fullName>3/25/2021</fullName>
            </value>
            <value>
                <fullName>4/10/2021</fullName>
            </value>
            <value>
                <fullName>4/25/2021</fullName>
            </value>
            <value>
                <fullName>5/10/2021</fullName>
            </value>
            <value>
                <fullName>5/25/2021</fullName>
            </value>
            <value>
                <fullName>6/10/2021</fullName>
            </value>
            <value>
                <fullName>6/25/2021</fullName>
            </value>
            <value>
                <fullName>7/10/2021</fullName>
            </value>
            <value>
                <fullName>7/25/2021</fullName>
            </value>
            <value>
                <fullName>8/10/2021</fullName>
            </value>
            <value>
                <fullName>8/25/2021</fullName>
            </value>
            <value>
                <fullName>9/10/2021</fullName>
            </value>
            <value>
                <fullName>9/25/2021</fullName>
            </value>
            <value>
                <fullName>10/10/2021</fullName>
            </value>
            <value>
                <fullName>10/25/2021</fullName>
            </value>
            <value>
                <fullName>11/10/2021</fullName>
            </value>
            <value>
                <fullName>11/25/2021</fullName>
            </value>
            <value>
                <fullName>12/10/2021</fullName>
            </value>
            <value>
                <fullName>12/25//2021</fullName>
            </value>
            <value>
                <fullName>1/10/2022</fullName>
            </value>
            <value>
                <fullName>1/25/2022</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>