force-app/main/default/objects/Work_Order__c/fields/Pet_Issue__c.field-meta.xml
<CustomField>
    <fullName>Pet_Issue__c</fullName>
    <label>Smell Issue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Urine Smell</fullName>
            </value>
            <value>
                <fullName>Other Foul Smell</fullName>
            </value>
            <value>
                <fullName>Smoke Smell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>