force-app/main/default/objects/Work_Order__c/fields/Phone_p__c.field-meta.xml
<CustomField>
    <fullName>Phone_p__c</fullName>
    <description>Pulls from Account_Name__r.Phone</description>
    <inlineHelpText>Phone number pulled from account</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>