force-app/main/default/objects/Work_Order__c/fields/Post_Notes_Internal__c.field-meta.xml
<CustomField>
    <fullName>Post_Notes_Internal__c</fullName>
    <inlineHelpText>Include click on times for operators, anything CYA, including banding, and if you used heat transfer (include # of attempts &amp; duration of longest attempt), and any customer communications</inlineHelpText>
    <label>Post Notes Internal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>