force-app/main/default/objects/Work_Order__c/fields/Property_City_Formula__c.field-meta.xml
<CustomField>
    <fullName>Property_City_Formula__c</fullName>
    <formula>Account_Name__r.Property_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property City Formula</label>
    <type>Text</type>
</CustomField>