force-app/main/default/objects/Work_Order__c/fields/Property_State_Formula__c.field-meta.xml
<CustomField>
    <fullName>Property_State_Formula__c</fullName>
    <formula>Account_Name__r.Property_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property State Formula</label>
    <type>Text</type>
</CustomField>