force-app/main/default/objects/Work_Order__c/fields/Property_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Zip_Code__c</fullName>
    <label>Property Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>