force-app/main/default/objects/Work_Order__c/fields/Property_Zip_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>Property_Zip_Code_Formula__c</fullName>
    <formula>Account_Name__r.Property_Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Zip Code Formula</label>
    <type>Text</type>
</CustomField>