force-app/main/default/objects/Work_Order__c/fields/Rec_rm_Great_rm__c.field-meta.xml
<CustomField>
    <fullName>Rec_rm_Great_rm__c</fullName>
    <inlineHelpText>Very large living or family room, or a very large basement room or area.</inlineHelpText>
    <label>Rec rm/Great rm</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rec rm/Great rm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>