force-app/main/default/objects/Work_Order__c/fields/Red_Bright_Color_Removal__c.field-meta.xml
<CustomField>
    <fullName>Red_Bright_Color_Removal__c</fullName>
    <label>Red/Bright Color Removal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>